--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+<!-- pure css grids -->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/grids-responsive-min.css" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
